[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["sattosan <sato.yuya1211@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
httpx = "^0.28.1"
python-dotenv = "^1.0.1"
beautifulsoup4 = "^4.12.0"
pyyaml = "^6.0.1"
fastapi = "^0.115.0"
"uvicorn[standard]" = "^0.32.0"
itsdangerous = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
